--- a/roles/hostname-compute/tasks/main.yml
+++ b/roles/hostname-compute/tasks/main.yml
@@ -2,6 +2,7 @@
 
 - name: Mange Compute Node Hostname
   hostname: name=compute{{ ansible_default_ipv4.address.split('.')[-1] }}
+  environment: "{{ python3_env }}"
   tags:
     - hostname
 
