--- a/roles/swift-storage/tasks/main.yml
+++ b/roles/swift-storage/tasks/main.yml
@@ -1,6 +1,5 @@
 ---
 
-
 - name: Install wift-storage packages
   apt: name={{ item }} state=installed force=yes
   with_items:
@@ -20,37 +19,62 @@
   tags:
      - swift-storage
 
-- name: Ensure /srv/node/sdc is ok
+- name: Ensure /srv/node/sdb is ok
   file: 
-     path: /srv/node/{{ swift_dev_name }} 
+     path: /srv/node/{{ swift_dev_name1 }} 
      state: directory 
      owner: swift 
      group: swift
   tags:
      - swift-storage
 
-- name: Parted the disk
+- name: Ensure /srv/node/sdc is ok
+  file:
+     path: /srv/node/{{ swift_dev_name2 }}
+     state: directory
+     owner: swift
+     group: swift
+  tags:
+     - swift-storage
+
+- name: Parted the disk1
   parted:
-    device: /dev/{{ swift_dev_name }}
+    device: /dev/{{ swift_dev_name1 }}
     number: 1
     flags: [ lvm ]
     state: present
   tags:
      - swift-storage
-  
 
-- name: Format the {{ swift_dev_path }} device as XFS
+- name: Parted the disk2
+  parted:
+    device: /dev/{{ swift_dev_name2 }}
+    number: 1
+    flags: [ lvm ]
+    state: present
+  tags:
+     - swift-storage 
+
+- name: Format the {{ swift_dev_path1 }} device as XFS
   filesystem:
     fstype: xfs 
-    dev: "{{ swift_dev_path }}"
+    dev: "{{ swift_dev_path1 }}"
+    force: yes
+  tags:
+     - swift-storage
+
+- name: Format the {{ swift_dev_path2 }} device as XFS
+  filesystem:
+    fstype: xfs
+    dev: "{{ swift_dev_path2 }}"
     force: yes
   tags:
      - swift-storage
 
 - name: Edit the /etc/fstab file and add the following
   mount: 
-    path: "/srv/node/{{ swift_dev_name }}"
-    src: "{{ swift_dev_path }}"
+    path: "/srv/node/{{ swift_dev_name1 }}"
+    src: "{{ swift_dev_path1 }}"
     fstype: xfs 
     opts: noatime,nodiratime,nobarrier,logbufs=8
     dump: 0 
@@ -59,35 +83,62 @@
   tags:
      - swift-storage
 
-- name: Mount device
-  shell: mount /srv/node/{{ swift_dev_name }}
+- name: Edit the /etc/fstab file and add the following
+  mount:
+    path: "/srv/node/{{ swift_dev_name2 }}"
+    src: "{{ swift_dev_path2 }}"
+    fstype: xfs
+    opts: noatime,nodiratime,nobarrier,logbufs=8
+    dump: 0
+    passno: 2
+    state: present
+  tags:
+     - swift-storage
+
+- name: Mount device /srv/node/{{ swift_dev_name1 }}
+  shell: mount /srv/node/{{ swift_dev_name1 }}
+  tags:
+     - swift-storage
+
+- name: Mount device /srv/node/{{ swift_dev_name2 }}
+  shell: mount /srv/node/{{ swift_dev_name2 }}
   tags:
      - swift-storage
 
 - name: Confiugre rsyncd
-  template: src=rsyncd.j2 dest=/etc/rsyncd.conf
+  template: 
+    src: rsyncd.j2 
+    dest: /etc/rsyncd.conf
   tags:
      - swift-storage
 
 - name: Ensure rsyncd is enabled
-  copy: src=rsync dest=/etc/default/rsync
+  copy: 
+    src: rsync 
+    dest: /etc/default/rsync
   notify: restart rsync
   changed_when: true
   tags:
      - swift-storage
 
 - name: Configure swift/account-server
-  template: src=account-server.j2 dest=/etc/swift/account-server.conf
+  template: 
+    src: account-server.j2 
+    dest: /etc/swift/account-server.conf
   tags:
      - swift-storage
 
 - name: Configure swift/container-server
-  template: src=container-server.j2 dest=/etc/swift/container-server.conf
+  template: 
+    src: container-server.j2 
+    dest: /etc/swift/container-server.conf
   tags:
      - swift-storage
 
 - name: Configure swift/object-server
-  template: src=object-server.j2  dest=/etc/swift/object-server.conf
+  template: 
+    src: object-server.j2
+    dest: /etc/swift/object-server.conf
   tags:
      - swift-storage
 
@@ -98,7 +149,7 @@
     group: swift
     recurse: yes
   tags:
-     - swift-storage
+     - swift-storage1
 
 - name: Ensure /var/cache/swift is ok
   file: 
@@ -111,7 +162,12 @@
      - swift-storage
 
 - name: put the *.ring.gz files on all storage servers
-  copy: src=fetch/{{ item }}.ring.gz dest=/etc/swift/{{item}}.ring.gz owner=swift group=swift mode=0640
+  copy: 
+    src: "fetch/{{ item }}.ring.gz"
+    dest: "/etc/swift/{{item}}.ring.gz"
+    owner: swift 
+    group: swift 
+    mode: 0640
   register: new_rings
   with_items:
     - account
@@ -120,9 +176,10 @@
   tags:
      - swift-storage
 
-
 - name: Configure swift
-  copy: src=swift.conf dest=/etc/swift/swift.conf
+  copy: 
+    src: swift.conf 
+    dest: /etc/swift/swift.conf
   tags:
      - swift-storage
 
@@ -136,18 +193,18 @@
   tags:
      - swift-storage
 
-
 - meta: flush_handlers
+  tags:
+     - swift-storage
 
-
-- name: restart swift-storage node services
+- name: Stop swift-storage node services
   command: swift-init all stop
   when: new_rings.changed
   ignore_errors: True
   tags:
      - swift-storage
  
-- name: restart swift-storage node services
+- name: Start swift-storage node services
   command: swift-init all start
   when: new_rings.changed
   tags:
