--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -3,20 +3,23 @@
 
 - name: Configuring source.list
   template: src=sources.list dest=/etc/apt/sources.list
+  environment: "{{ python3_env }}"
   tags:
      - common
 
 - name: Update apt cache
   apt: update_cache=yes
+  environment: "{{ python3_env }}"
   tags:
      - common
 
 - name: Update all packages to the latest version
   apt: upgrade=dist
+  environment: "{{ python3_env }}"
   tags:
      - common
 
-- name: install python2.7
+- name: Install depend on the package
   apt: name={{ item }} state=latest force=yes
   with_items:
     - python2.7
@@ -24,45 +27,49 @@
     - python-apt
     - python3-apt
     - python-apt-common
+    - software-properties-common
+  environment: "{{ python3_env }}"
   tags:
      - common
 
-- name: Install software-properties-common
-  command: apt install software-properties-common
-  tags:
-     - common
-
-- name: Add apt repo cloud-archive ocata
-  command: add-apt-repository cloud-archive:ocata
+- name: Add apt repo cloud-archive pike
+  command: add-apt-repository cloud-archive:pike
+  environment: "{{ python3_env }}"
   tags:
     - common
 
 - name: Update apt cache
   apt: update_cache=yes
+  environment: "{{ python3_env }}"
   tags:
      - common
 
 - name: Update all packages to the latest version
   apt: upgrade=dist
+  environment: "{{ python3_env }}"
   tags:
      - common
 
-
 - name: Create the hosts file for all machines
   template: src=hosts.j2 dest=/etc/hosts
+  environment: "{{ python3_env }}"
   tags:
      - common
 
 - name: Install python-openstackclient
   apt: name=python-openstackclient state=latest force=yes
+  environment: "{{ python3_env }}"
   tags:
      - common
 
-- name: Install software
+- name: Install devops software
   apt: name={{ item }} state=latest force=yes
   with_items:
     - iftop
     - htop
     - lrzsz
+    - landscape-common
+    - update-notifier-common
+  environment: "{{ python3_env }}"
   tags:
      - common
