--- a/roles/neutron-compute/tasks/main.yml
+++ b/roles/neutron-compute/tasks/main.yml
@@ -9,13 +9,13 @@
      - neutron-compute
 
  
-- name: add br_netfilter to modules files
+- name: Add br_netfilter to modules files
   shell: echo "br_netfilter" >> /etc/modules
   tags:
      - neutron-compute
 
 
-- name: add system config
+- name: Add system config
   blockinfile:
     path: /etc/sysctl.conf
     block: |
@@ -27,14 +27,16 @@
      - neutron-compute
 
 
-- name: update sysctl
+- name: Update sysctl
   shell: sysctl -p
   tags:
      - neutron-compute
 
 
 - name: Install neutron compute packages
-  apt: name={{ item }} state=installed force=yes
+  apt: 
+    name: "{{ item }}"
+    state: present
   with_items:
    - neutron-plugin-ml2 
    - neutron-openvswitch-agent
@@ -43,22 +45,29 @@
 
 
 - name: Configure neutron
-  template: src=neutron.j2 dest=/etc/neutron/neutron.conf
+  template: 
+    src: neutron.j2 
+    dest: /etc/neutron/neutron.conf
   tags:
      - neutron-compute
 
 
 - name: Configure ml2 conf
-  template: src=ml2_conf.j2 dest=/etc/neutron/plugins/ml2/ml2_conf.ini
+  template: 
+    src: ml2_conf.j2
+    dest: /etc/neutron/plugins/ml2/ml2_conf.ini
   tags:
      - neutron-compute
 
 
 - name: Configure openvswitch_agent
-  template: src=openvswitch_agent.j2 dest=/etc/neutron/plugins/ml2/openvswitch_agent.ini
+  template: 
+    src: openvswitch_agent.j2 
+    dest: /etc/neutron/plugins/ml2/openvswitch_agent.ini
   notify:
    - restart openvswitch-switch
    - restart neutron-openvswitch-agent
+   - restart nova-compute 
   changed_when: true
   tags:
      - neutron-compute
