--- a/roles/nova/handlers/main.yml
+++ b/roles/nova/handlers/main.yml
@@ -1,20 +1,30 @@
 ---
 
 - name: restart nova-api
-  service: name=nova-api state=restarted
+  service: 
+    name: nova-api 
+    state: restarted
 
 - name: restart nova-consoleauth
-  service: name=nova-consoleauth state=restarted
+  service: 
+    name: nova-consoleauth
+    state: restarted
 
 - name: restart nova-scheduler
-  service: name=nova-scheduler state=restarted
+  service: 
+    name: nova-scheduler
+    state: restarted
 
 - name: restart nova-conductor
-  service: name=nova-conductor state=restarted
+  service: 
+    name: nova-conductor
+    state: restarted
 
 
 - name: restart nova-novncproxy
-  service: name=nova-novncproxy state=restarted
+  service: 
+    name: nova-novncproxy
+    state: restarted
 
 
 
